# sumire

./: .gitignore  LICENSE  README.en.md  README.md  dependent_licences.csv  pyproject.toml
.github/workflows/: build_docs.yml  python-coverage.yml  python-lint.yml  python-package.yml  python-test.yml
data/test/: test.txt
docs/: conf.py  index.rst
scripts/controllers/evaluations/: tpot_main.py
scripts/data/: jglue_data_loader.py
sumire/: __about__.py  __init__.py
sumire/resources/model_card/gensim/: README.md  cc.ja.300.json
sumire/resources/model_card/gensim/chive/: chive-1.0-mc5.json  chive-1.1-mc15.json  chive-1.1-mc30.json  chive-1.1-mc5.json  chive-1.1-mc90.json  chive-1.2-mc15.json  chive-1.2-mc30.json  chive-1.2-mc5.json  chive-1.2-mc90.json
sumire/resources/model_card/gensim/cl-tohoku_jawiki_vector/20180402/: jawiki.all_vectors.100d.json  jawiki.all_vectors.200d.json  jawiki.all_vectors.300d.json  jawiki.entity_vectors.100d.json  jawiki.entity_vectors.200d.json  jawiki.entity_vectors.300d.json  jawiki.word_vectors.100d.json  jawiki.word_vectors.200d.json  jawiki.word_vectors.300d.json
sumire/resources/model_card/gensim/cl-tohoku_jawiki_vector/20181001/: jawiki.all_vectors.100d.json  jawiki.all_vectors.200d.json  jawiki.all_vectors.300d.json  jawiki.entity_vectors.100d.json  jawiki.entity_vectors.200d.json  jawiki.entity_vectors.300d.json  jawiki.word_vectors.100d.json  jawiki.word_vectors.200d.json  jawiki.word_vectors.300d.json
sumire/resources/model_card/gensim/cl-tohoku_jawiki_vector/20190520/: jawiki.all_vectors.100d.json  jawiki.all_vectors.200d.json  jawiki.all_vectors.300d.json  jawiki.entity_vectors.100d.json  jawiki.entity_vectors.200d.json  jawiki.entity_vectors.300d.json  jawiki.word_vectors.100d.json  jawiki.word_vectors.200d.json  jawiki.word_vectors.300d.json
sumire/resources/model_card/transformers/: GLuCoSE-base-ja.json  README.md  bert-base-japanese-v3.json  electra-small-japanese-discriminator.json  line-distilbert-base-japanese.json  luke-japanese-base-lite.json  sbert-base-ja.json  sentence-bert-base-ja-mean-tokens-v2.json
sumire/tokenizer/: __init__.py  auto.py  base.py  jumanpp.py  mecab.py  spacy_ginza.py  spm.py  sudachi.py
sumire/utils/: download_file.py  run_sh.py  unbz_file.py  untar_file.py  unzip_file.py
sumire/vectorizer/: __init__.py  count.py  swem.py  tfidf.py  transformer_emb.py
sumire/vectorizer/base/: common.py  sklearn_vectorizer_base.py  transformer_vectorizer_base.py
tests/tokenizer/: test_tokenizers.py
tests/vectorizer/: _test_get_token_vectors.py  _test_vectorizer.py  _test_vectorizer_decode.py  test_count_vectorizer.py  test_swem_vectorizer.py  test_tfidf_vectorizer.py  test_transformer_emb_vectorizer.py
